fixed nav bar being behind certain elements

--- a/app/globals.css
+++ b/app/globals.css
@@ -29,7 +29,7 @@
 
   /*NAV STYLING*/
   .nav-wrapper {
-    @apply fixed top-6 left-1/2 -translate-x-1/2 w-fit
+    @apply fixed top-6 left-1/2 -translate-x-1/2 w-fit z-50
     px-8 py-3 rounded-2xl
     backdrop-blur-md bg-white/5
     border border-white/10 shadow-lg;
@@ -66,7 +66,7 @@
   }
 
   .hero{
-    @apply min-h-screen;
+    @apply absolute inset-0 bg-linear-to-r from-highlight to-highlight2;
   }
 
   .gradient-bg{
@@ -233,7 +233,7 @@
   }
 
   .deliverable{
-    @apply flex flex-col gap-20 justify-center items-center w-3/4;
+    @apply flex flex-col gap-20 justify-center items-center w-3/4 sm:min-h-screen;
   }
 
   .projects-image{
@@ -244,8 +244,8 @@
     @apply scale-110;
   }
 
-  .projects-link{
-    @apply flex flex-row justify-center gap-3;
+  .projects-links{
+    @apply flex flex-row justify-center items-center gap-3;
   }
 
   .projects-description {
